kubernetes/apps/networking/public-webhook-gateway/app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: networking-public
  labels:
    gateway.supermorphic.com/access: public
