kubernetes/apps/networking/public-webhook-gateway/app/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: public-webhooks
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-webhooks
  namespace: networking-public
spec:
  gatewayClassName: public-webhooks
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: public-webhooks
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      hostname: hooks.lab.supermorphic.com
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: hooks-lab-supermorphic-com-tls
        mode: Terminate
